removed magic numbers and fix some layout issues

--- a/src/sections/Footer/FooterMid.scss
+++ b/src/sections/Footer/FooterMid.scss
@@ -35,34 +35,45 @@
 // }
 
 .footer-mid {
-  margin: 10px auto;
+  margin: 10px 0;
   text-align: center;
   width: 1000px;
-  min-width: 1000px;
-  max-width: 1000px;
+  // min-width: 1000px;
+  // max-width: 1000px;
   color: #ddd;
   white-space: nowrap;
   line-height: 18px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+
+  .footer-mid-inner-container {
+    display: flex;
+    // gap: 83px;
+
+    // margin-left: 10px;
+  }
 }
 
 .footer-logo-container {
   white-space: normal;
-  padding: 0 0.6em;
+  // padding: 0 0.6em;
   display: inline-block;
   list-style-type: none;
   font-size: 12px;
   text-align: center;
   max-width: 1000px;
-  margin: 30px auto 15px;
+  margin: 30px 0 15px;
   line-height: 0;
   white-space: nowrap;
-  padding-left: 32px;
+  // padding-left: 32px;
+  margin-right: -16px;
 }
 
 .footer-logo {
   text-decoration: none;
   white-space: nowrap;
-  padding: 0 0.6em;
+  // padding: 0 0.6em;
 
   div {
     background-position: -10px -90px;
@@ -77,9 +88,11 @@
 .options-container {
   white-space: normal;
   vertical-align: top;
-  margin: 18px auto 0; // wasn't here
-  margin-left: 66px;
-  padding: 0 0.6em;
+  // margin: 18px auto 0; // wasn't here
+  margin-top: 18px;
+  margin-left: 92px;
+  // padding: 0 0.6em;
+  // padding-left: 10px;
   display: inline-block;
 
   .inner-container {
@@ -88,6 +101,7 @@
     text-align: center; // wasn't here
     line-height: 18px;
     white-space: nowrap;
+    margin-left: 10px;
 
     a {
       text-decoration: none;
